<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="Station_State" Id="{7e3adeeb-0384-4e33-9b5d-f2be48b2e947}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE Station_State :
(
	RUNNING := 0,
	STOPPED := 1,
	IDLE := 2,
	FAULTED := 3,
	HOMING := 4,
	RESETTING := 5
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>