<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="fromHMI" Id="{7cb68155-3057-4268-945b-b02a2bde1148}">
    <Declaration><![CDATA[TYPE fromHMI :
STRUCT
	cmdReset		: BOOL;		// reset the system
	cmdHome			: BOOL;		// home the system
	cmdAbort		: BOOL;		// abort the system
	cmdStart		: BOOL;		// start the system
	stsReboot		: BOOL;		// HMI rebooting
	stsPointSelected	: ARRAY[0..1] OF INT;	// point selected on the HMI (x,y)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>